# jki-labview-python-server

./: .gitignore  LICENSE  Password.ini  README.md
.github/workflows/: python-package.yml
Build Support/: JKI Library Paid License.txt  JKI_Python_Bridge_for_LV.lf  NITPLAT2013.exe.url
Experimental/: Run-Time Activation Checker.vi
Source/: .vipb  .vipc  JKI Python Bridge - Example 2 Nodes.vi  JKI Python Bridge - Example 2 PyObjects 1 Event Structure.vi  JKI Python Bridge - Example.vi  JKI Python Bridge - VI Tree.vi  JKI_Python_Bridge_for_LV.aliases  JKI_Python_Bridge_for_LV.dragon  JKI_Python_Bridge_for_LV.lvlib  JKI_Python_Bridge_for_LV.lvlps  JKI_Python_Bridge_for_LV.lvproj  JKI_Python_Bridge_for_LV.vipb  JKI_Python_Bridge_for_LV.vipc  JKI_Python_Server - VI Tree.vi  JKI_Python_Server Example 2 Nodes 1 Registration.vi  JKI_Python_Server Example 2 Nodes.vi  JKI_Python_Server Example 2 PyObjects 1 Event Structure.vi  JKI_Python_Server Example.vi  LabVIEW.py  LabVIEW_Extended.py  LabVIEW_OLD.py  PythonResponseType.ctl  Python_CMD Send Response.vi  jki_python_bridge.lvlib  lvJSON.py
Source/Call/: Call.lvclass  Create.vi  Enum to List.vi  Get Arguments as LabVIEW Data.vi  Get Arguments as LabVIEW Data.vim  Get Method Name.vi  Get PyObject and Method Names.vi  Send Return Value.vi  Send Return Value.vim
Source/CallHandler/: CallHandler.lvclass  Create.vi  Destroy.vi  EnumerateAPI.vi  Get Call Registration.vi  Get Methods.vi  Get Name.vi  HandlePythonMessage.vi  PyObject.lvclass  Send Return Value.vi  Set Call Registration.vi
Source/Node/: EnumerateAPI.vi  Get Call Registration.vi  HandlePythonMessage.vi  Node.lvclass  Send Return Value.vi  Set Call Registration.vi
Source/PyObject/: Create PyObject.vi  Create.vi  Destroy.vi  EnumerateAPI.vi  Get Methods.vi  (+7 more)
builds/: jki_lib_python_bridge_for_labview-2.1.1.6.vip
py_src/: pyproject.toml  python_bridge_for_labview.pyi  setup.cfg
py_src/src/python_bridge_for_labview/: labview.py
py_src/test/: test.py  test_pytest.py
(+203 files in other folders)
