[tool.poetry]
name = "python-bridge-for-labview"
version = "0.0.2"
description = "Create custom APIs for your LabVIEW applications"
authors = ["JKI"]
license = "Proprietary"
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

#[tool.poetry.dev-dependencies]
#Cython = "^0.29.27"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "nuitka"]
build-backend = "nuitka.distutils.Build"

