[metadata]
name = python-bridge-for-labview
version = 0.0.2
author = JKI
author_email = info@jki.net
description = Create custom APIs for your LabVIEW applications
;long_description = file: README.md
;long_description_content_type = text/markdown
;url = https://github.com/pypa/sampleproject
project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: OS Independent
build_with_nuitka = True

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka"]
build-backend = "nuitka.distutils.Build"